New use case: song stats. Several fix in repositories.
